fix:being able to click on pages not visible

--- a/src/components/PageViewer.module.scss
+++ b/src/components/PageViewer.module.scss
@@ -44,6 +44,7 @@
 .hidden{
     opacity: 0;
     z-index: 1;
+    pointer-events: none;
 }
 
 .visible{
